# RAG_learning_project

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  FastAPI_RAG_Chatbot_Implementation_Plan.md  IMPLEMENTATION_COMPLETE.md  QUICK_REFERENCE.md  README.md  USAGE_EXAMPLES.md  USER_DOCUMENTATION.md  docker-compose.yml  pyproject.toml  requirements.txt  test_system.py
data/: vectordb.faiss  vectordb.pkl
fastapi-docs-chatbot/: .gitignore  requirements.txt
fastapi-docs-chatbot/src/config/: settings.py
scripts/: build_knowledge_base.py
src/api/: main.py  models.py
src/config/: settings.py
src/crawler/: scraper.py  text_processor.py
src/embeddings/: embedding_service.py  vector_store.py
src/generation/: llm_service.py  prompt_templates.py
src/retrieval/: retriever.py
src/services/: __init__.py  rag_service.py  reranking_service.py
tests/: test_api.py  test_crawler.py  test_embeddings.py  test_text_processor.py
